--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 duckdb
-google-cloud-storage
+boto3
 pandas
 pyarrow
 fastparquet
@@ -9,5 +9,4 @@ torchaudio
 ultralytics
 streamlit
 opencv-python
-st-files-connection
-gcsfs
+st_files_connection
