--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-duckdb==1.2.0
-boto3==1.34.77
-pandas==2.1.4
-pyarrow==14.0.2
-fastparquet==2023.10.1
+duckdb
+boto3
+pandas
+pyarrow
+fastparquet
 torch
-torchvision>=0.14.0,<0.17.0
-torchaudio>=0.14.0,<0.17.0
-ultralytics==8.0.230
-streamlit==1.29.0
-opencv-python==4.9.0.54
-st_files_connection==0.1.4
-plotly==5.18.0
+torchvision
+torchaudio
+ultralytics
+streamlit
+opencv-python
+st_files_connection
+plotly
